Edge-to-edge may not display for all users From Android 15, apps targeting SDK 35 will display edge-to-edge by default. Apps targeting SDK 35 should handle insets to make sure that their app displays correctly on Android 15 and later. Investigate this issue and allow time to test edge-to-edge and make the required updates. Alternatively, call enableEdgeToEdge() for Kotlin or EdgeToEdge.enable() for Java for backward compatibility.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ body {
     background-color: #f0f0f0;
     user-select: none;
     -webkit-user-select: none;
+	padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
    
 }
 
